--- a/.github/workflows/build-push.yml
+++ b/.github/workflows/build-push.yml
@@ -4,40 +4,40 @@ on:
     push:
       branches:
         - 'main'
-        - '186-create-executable-python-zip-archive-using-zipapp had recent pushes'
+        - '186-create-executable-python-zip-archive-using-zipapp'
       tags:
         - 'v*'
 
 jobs:
-  build-and-push:
-    if: |
-        github.repository == 'xtuml/otel2puml'
-            && github.actor != 'dependabot[bot]'
-    runs-on: ubuntu-latest
-    steps:
-      - name: Checkout code
-        uses: actions/checkout@v4
+  # build-and-push:
+  #   if: |
+  #       github.repository == 'xtuml/otel2puml'
+  #           && github.actor != 'dependabot[bot]'
+  #   runs-on: ubuntu-latest
+  #   steps:
+  #     - name: Checkout code
+  #       uses: actions/checkout@v4
 
-      - name: Login to GitHub Container Registry
-        uses: docker/login-action@v3
-        with:
-          registry: ghcr.io
-          username: ${{ github.actor }}
-          password: ${{ secrets.GITHUB_TOKEN }}
+  #     - name: Login to GitHub Container Registry
+  #       uses: docker/login-action@v3
+  #       with:
+  #         registry: ghcr.io
+  #         username: ${{ github.actor }}
+  #         password: ${{ secrets.GITHUB_TOKEN }}
 
-      - name: Docker meta
-        id: meta
-        uses: docker/metadata-action@v5
-        with:
-            images: ghcr.io/xtuml/otel2puml
+  #     - name: Docker meta
+  #       id: meta
+  #       uses: docker/metadata-action@v5
+  #       with:
+  #           images: ghcr.io/xtuml/otel2puml
 
-      - name: Build and push
-        uses: docker/build-push-action@v5
-        with:
-            context: .
-            push: true
-            tags: ${{ steps.meta.outputs.tags }}
-            labels: ${{ steps.meta.outputs.labels }}
+  #     - name: Build and push
+  #       uses: docker/build-push-action@v5
+  #       with:
+  #           context: .
+  #           push: true
+  #           tags: ${{ steps.meta.outputs.tags }}
+  #           labels: ${{ steps.meta.outputs.labels }}
 
   zipapp-amd-build-and-push:
     if: |
