--- a/.github/workflows/build-push.yml
+++ b/.github/workflows/build-push.yml
@@ -1,92 +1,39 @@
-name: Build and Push Docker Image and Zipapp Archive
+name: Build and Push Docker Image
 on:
     workflow_dispatch:
     push:
       branches:
         - 'main'
-        - '186-create-executable-python-zip-archive-using-zipapp'
       tags:
         - 'v*'
 
 jobs:
-  # build-and-push:
-  #   if: |
-  #       github.repository == 'xtuml/otel2puml'
-  #           && github.actor != 'dependabot[bot]'
-  #   runs-on: ubuntu-latest
-  #   steps:
-  #     - name: Checkout code
-  #       uses: actions/checkout@v4
-
-  #     - name: Login to GitHub Container Registry
-  #       uses: docker/login-action@v3
-  #       with:
-  #         registry: ghcr.io
-  #         username: ${{ github.actor }}
-  #         password: ${{ secrets.GITHUB_TOKEN }}
-
-  #     - name: Docker meta
-  #       id: meta
-  #       uses: docker/metadata-action@v5
-  #       with:
-  #           images: ghcr.io/xtuml/otel2puml
-
-  #     - name: Build and push
-  #       uses: docker/build-push-action@v5
-  #       with:
-  #           context: .
-  #           push: true
-  #           tags: ${{ steps.meta.outputs.tags }}
-  #           labels: ${{ steps.meta.outputs.labels }}
-
-  zipapp-amd-build-and-push:
+  build-and-push:
     if: |
-      github.repository == 'xtuml/otel2puml'
-          && github.actor != 'dependabot[bot]'
+        github.repository == 'xtuml/otel2puml'
+            && github.actor != 'dependabot[bot]'
     runs-on: ubuntu-latest
     steps:
       - name: Checkout code
         uses: actions/checkout@v4
 
-      - name: Set up Python
-        uses: actions/setup-python@v4
+      - name: Login to GitHub Container Registry
+        uses: docker/login-action@v3
         with:
-          python-version: '3.11'
+          registry: ghcr.io
+          username: ${{ github.actor }}
+          password: ${{ secrets.GITHUB_TOKEN }}
 
-      - name: Create tel2puml-amd.pyz
-        run: python -m zipapp tel2puml-amd
-      
-      - name: Upload to GitHub Releases
-        uses: actions/upload-release-asset@v2
-        if: startsWith(github.ref, 'refs/tags/')
+      - name: Docker meta
+        id: meta
+        uses: docker/metadata-action@v5
         with:
-          upload_url: ${{ github.event.release.upload_url }}
-          asset_path: ./tel2puml-amd.pyz
-          asset_name: tel2puml-amd.pyz
-          asset_content_type: application/zip
+            images: ghcr.io/xtuml/otel2puml
 
-  zipapp-arm-build-and-push:
-    if: |
-      github.repository == 'xtuml/otel2puml'
-          && github.actor != 'dependabot[bot]'
-    runs-on: macos-latest
-    steps:
-      - name: Checkout code
-        uses: actions/checkout@v4
-
-      - name: Set up Python
-        uses: actions/setup-python@v4
+      - name: Build and push
+        uses: docker/build-push-action@v5
         with:
-          python-version: '3.11'
-
-      - name: Create tel2puml-arm.pyz
-        run: python -m zipapp tel2puml-arm
-      
-      - name: Upload to GitHub Releases
-        uses: actions/upload-release-asset@v2
-        if: startsWith(github.ref, 'refs/tags/')
-        with:
-          upload_url: ${{ github.event.release.upload_url }}
-          asset_path: ./tel2puml-arm.pyz
-          asset_name: tel2puml-arm.pyz
-          asset_content_type: application/zip
+            context: .
+            push: true
+            tags: ${{ steps.meta.outputs.tags }}
+            labels: ${{ steps.meta.outputs.labels }}
