--- a/.github/workflows/build-push-arifacts.yml
+++ b/.github/workflows/build-push-arifacts.yml
@@ -1,9 +1,10 @@
 name: Build and Push Zipapp Archive To Release
 on:
-    workflow_dispatch:
-    push:
-      tags:
-        - 'v*'
+  release:
+    types: [published]
+  push:
+    tags:
+      - 'v-dev-beta'
 
 jobs:
   zipapp-amd-build-and-push:
@@ -21,7 +22,7 @@ jobs:
           python-version: '3.11'
 
       - name: Create tel2puml-amd.pyz
-        run: python -m zipapp tel2puml-amd
+        run: python -m zipapp tel2puml -o tel2puml-amd.pyz
       
       - name: Upload to GitHub Releases
         uses: softprops/action-gh-release@v2
@@ -44,7 +45,7 @@ jobs:
           python-version: '3.11'
 
       - name: Create tel2puml-arm.pyz
-        run: python -m zipapp tel2puml-arm
+        run: python -m zipapp tel2puml -o tel2puml-arm.pyz
 
       - name: Upload to GitHub Releases
         uses: softprops/action-gh-release@v2
