--- a/.github/workflows/build-push-arifacts.yml
+++ b/.github/workflows/build-push-arifacts.yml
@@ -17,6 +17,9 @@ jobs:
         uses: actions/setup-python@v4
         with:
           python-version: '3.11'
+      
+      - name: install requirements
+        run: pip install -r requirements.txt
 
       - name: Create tel2puml-amd.pyz
         run: python -m zipapp tel2puml -o tel2puml-amd.pyz
@@ -40,6 +43,9 @@ jobs:
         uses: actions/setup-python@v4
         with:
           python-version: '3.11'
+      
+      - name: install requirements
+        run: pip install -r requirements.txt
 
       - name: Create tel2puml-arm.pyz
         run: python -m zipapp tel2puml -o tel2puml-arm.pyz
