--- a/.github/workflows/build-push-arifacts.yml
+++ b/.github/workflows/build-push-arifacts.yml
@@ -19,7 +19,7 @@ jobs:
           python-version: '3.11'
       
       - name: install requirements
-        run: python -m pip install -r requirements.txt
+        run: python -m pip install -r requirements.txt --target tel2puml
 
       - name: Create tel2puml-amd.pyz
         run: python -m zipapp tel2puml -o tel2puml-amd.pyz
@@ -45,7 +45,7 @@ jobs:
           python-version: '3.11'
       
       - name: install requirements
-        run: python -m pip install -r requirements.txt
+        run: python -m pip install -r requirements.txt --target tel2puml
 
       - name: Create tel2puml-arm.pyz
         run: python -m zipapp tel2puml -o tel2puml-arm.pyz
