--- a/.github/workflows/build-push-arifacts.yml
+++ b/.github/workflows/build-push-arifacts.yml
@@ -25,4 +25,4 @@ jobs:
         uses: softprops/action-gh-release@v2
         if: startsWith(github.ref, 'refs/tags/')
         with:
-          files: tel2puml.pyz
+          files: dist/tel2puml.pyz
