259 fix zip app so pre requisites installed (#260)
* 259 - add requirements to build

* 259 - fix artifacts upload

* 259 - add requirements into app

* 259 - fix to arm version

* 259 - add platform to pip install

* 259 - update mac os build

* 259 - add bash script for building zipapp

* 259 - update script

* 259 - update script

* 259 - update script

* 259 - add init file and update script

* 259 - update script

* 259 - fix adding of paths

* 259 - update script

* 259 - set script to use command line argument

* 259 - update wokflow

* 259 - update tests for main_handler name change

* 259 - correct file name

* 259 - remove matplotlib import

* 259 - add lazy install of requirements to script

* 259 - update build script to use temporary directory

* 259 - update README to account for change

* 259 - update workflow

* 259 - change path of artifact

* 259 - reinstate plotting function

* 259 - add docstring

--- a/.github/workflows/build-push-arifacts.yml
+++ b/.github/workflows/build-push-arifacts.yml
@@ -18,34 +18,11 @@ jobs:
         with:
           python-version: '3.11'
 
-      - name: Create tel2puml-amd.pyz
-        run: python -m zipapp tel2puml -o tel2puml-amd.pyz
+      - name: Create tel2puml.pyz
+        run: ./scripts/build_zip_app.sh
       
       - name: Upload to GitHub Releases
         uses: softprops/action-gh-release@v2
         if: startsWith(github.ref, 'refs/tags/')
         with:
-          files: tel2puml-amd.pyz
-
-  zipapp-arm-build-and-push:
-    if: |
-      github.repository == 'xtuml/otel2puml'
-          && github.actor != 'dependabot[bot]'
-    runs-on: macos-latest
-    steps:
-      - name: Checkout code
-        uses: actions/checkout@v4
-
-      - name: Set up Python
-        uses: actions/setup-python@v4
-        with:
-          python-version: '3.11'
-
-      - name: Create tel2puml-arm.pyz
-        run: python -m zipapp tel2puml -o tel2puml-arm.pyz
-
-      - name: Upload to GitHub Releases
-        uses: softprops/action-gh-release@v2
-        if: startsWith(github.ref, 'refs/tags/')
-        with:
-          files: tel2puml-arm.pyz
+          files: dist/tel2puml.pyz
