--- a/.github/workflows/test-workflow.yml
+++ b/.github/workflows/test-workflow.yml
@@ -26,11 +26,10 @@ jobs:
         uses: actions/checkout@v4
 
       - name: Setup-conda
-        uses: s-weigand/setup-conda@v1
+        uses: conda-incubator/setup-miniconda@v3
         with:
-          update-conda: true
           python-version: 3.11.9
-          conda-channels: conda-forge
+          channels: conda-forge
 
       - name: Install pre-requisites
         run: |
